# HSPTEK_Training

review/: bai2  bai2.c  bai3.c
task_w1/: main  main.c
training_w1/: README.md
training_w1/review/: bai1  bai1.c  bai2  bai2.c  bai3
training_w2/: README.md
training_w2/task_w2/oop/: Book.hpp  Document.hpp  Journal.hpp  library.txt  main  main.cpp
training_w2/task_w2/stack/: MyStack.hpp  main.cpp  stack
training_w3/: README.md
training_w3/task_w3/exercise1_makefile/: README.md
training_w3/task_w3/makefile/: README.md  app_debug  makefile
training_w3/task_w3/makefile/include/core/: calculator.hpp
training_w3/task_w3/makefile/src/: main.cpp
training_w3/task_w3/task_cmake/: CMakeLists.txt  README.md
training_w3/task_w3/task_cmake/include/geometry/: circle.hpp  rectangle.hpp  shape.hpp  shape_factory.hpp  triangle.hpp
training_w3/task_w3/task_cmake/include/utils/: logger.hpp
training_w3/task_w3/task_cmake/src/: main.cpp
training_w3/task_w3/task_cmake/src/geometry/: circle.cpp  rectangle.cpp  shape_factory.cpp  triangle.cpp
training_w3/task_w3/task_cmake/src/utils/: logger.cpp
training_w3/task_w3/task_hello_arm/: CMakeLists.txt  README.md  run_arm.sh
training_w3/task_w3/task_hello_arm/build_arm/: CMakeCache.txt  HelloArmApp  Makefile  cmake_install.cmake
training_w3/task_w3/task_hello_arm/include/: led_controller.hpp
training_w3/task_w3/task_hello_arm/src/: led_controller.cpp  main.cpp
training_w4/task_w4/debug_memoryleak/: CMakeLists.txt
training_w4/task_w4/debug_memoryleak/app/: main.c
training_w4/task_w4/debug_memoryleak/include/: device.h  sensor.h
training_w4/task_w4/debug_memoryleak/src/: device.c  sensor.c
training_w4/task_w4/shell_script/: test.sh
(+3 files in other folders)
